--- a/styles.css
+++ b/styles.css
@@ -8,21 +8,17 @@
 
 body {
   font-family: "Merriweather", serif;
-  background: #c8bfbd;
+  background: #95d2dd;
   font-size: 16px;
   height: 100vh;
-}
-
-main {
+  width: 100vw;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .container {
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
   width: 50vw;
   height: 350px;
   background: #ffffff;
@@ -35,11 +31,12 @@ main {
   flex-direction: column;
   justify-content: space-evenly;
   padding: 30px;
+  height: 100%;
 }
 
 .quote__content {
   padding: 30px;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   text-align: left;
 }
 
@@ -51,42 +48,47 @@ main {
 
 .quote__button {
   align-self: flex-end;
-  position: absolute;
-  top: 70%;
-  left: 80%;
   padding: 15px;
   letter-spacing: 2;
   font-family: "Merriweather", serif;
   border-radius: 5px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
   font-weight: 500;
   border: none;
   cursor: pointer;
-  background: #54abce;
+  background: #000000;
   color: white;
 }
 
 .quote__button:hover {
-  background: #217191;
+  background: #ffffff;
+  color: #000000;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
+}
+
+#tweet {
+  cursor: pointer;
+}
+
+i {
+  font-size: 30px;
 }
 
 footer {
   font-family: "Merriweather", serif;
-  position: relative;
-  top: 80%;
-  left: 45%;
+
   color: white;
 }
 
 footer a {
   text-decoration: none;
   color: #54abce;
-}
-
-@media (max-width: 1100px) {
-  .quote__button {
-    top: 80%;
-    left: 40%;
-  }
 }
 
 @media (max-width: 800px) {
@@ -102,8 +104,6 @@ footer a {
   }
   .quote__button {
     padding: 10px;
-    top: 85%;
-    left: 35%;
   }
 }
 
@@ -112,11 +112,6 @@ footer a {
     height: 500px;
   }
 
-  .quote__button {
-    padding: 10px;
-    top: 85%;
-    left: 30%;
-  }
   footer {
     top: 90%;
     left: 40%;
